I uploaded the rest

--- a/home.html
+++ b/home.html
@@ -8,6 +8,7 @@
 integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" 
 crossorigin="anonymous" referrerpolicy="no-referrer" />
 <link rel="stylesheet" href="utilitati.css">
+<link rel="stylesheet" href="display.css">
 <title>Bahna David</title>
 </head>
 <body>
@@ -17,7 +18,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
         <li><a href="home.html">Home</a></li>
         <li><a href="about.html">About us</a></li>
         <li><a href="team.html">Team</a></li>
-        <img src="./poze/logo.png" alt="logo" width="80px" height="80px">
+        <img src="./poze/logo-icon.png" alt="logo" width="75px" height="70px">
         <li><a href="gallery.html">Gallery</a></li>
         <li><a href="services.html">Services</a></li>
         <li><a href="contact.html">Contact</a></li>
@@ -30,11 +31,11 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
   
     <button class="Btn">
       <div class="cart">
-        <i class="fa-light fa-cart-shopping"></i>
+        <i class="fa-solid fa-cart-shopping"></i>
       </div>
-      
       <div class="text">Add to cart</div>
-    </button>    
+    </button> 
+
     </header>
     <div class="social-media">
       <ul>
