I made some improvements

--- a/contact.html
+++ b/contact.html
@@ -27,12 +27,12 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
        </div>  
    </header>
    <div class="social-media">
-       <ul>
-         <li onclick="topFunction()"><a href="#"><i class="fa-brands fa-twitter fa-2x"></i></a></li>
-         <li onclick="topFunction()"> <a href="#"><i class="fa-brands fa-facebook fa-2x"></i></a></li>
-         <li onclick="topFunction()"> <a href="#"><i class="fa-brands fa-instagram fa-2x"></i></a></li>
-         <li onclick="topFunction()"> <a href="#"><i class="fa-brands fa-github fa-2x"></i></a></li>
-       </ul>
+    <ul>
+      <li onclick="topFunction()"><a href="https://www.linkedin.com/in/david-beniamin-bahna-73a2872a5/" target="_blank"><i class="fa-brands fa-linkedin fa-2x"></i></a></li>
+      <li onclick="topFunction()"> <a href="https://www.facebook.com/david.beniamin.33/?locale=ro_RO" target="_blank"><i class="fa-brands fa-facebook fa-2x"></i></a></li>
+      <li onclick="topFunction()"> <a href="https://www.instagram.com/david.beniamin/" target="_blank"><i class="fa-brands fa-instagram fa-2x"></i></a></li>
+      <li onclick="topFunction()"> <a href="https://github.com/bunkless" target="_blank"><i class="fa-brands fa-github fa-2x"></i></a></li>
+    </ul>
      </div>
    <nav>
        <div class="about">
