--- a/gallery.html
+++ b/gallery.html
@@ -143,6 +143,6 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
     </div>
 </footer>
 
-<script src="script.js"></script>
+<script src="rest.js"></script>
 </body>
 </html>
