--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
         <li><a href="team.html">Team</a></li>
         <img src="./poze/logo-icon.png" alt="logo" width="75px" height="70px">
         <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="services.html">Services</a></li>
+        <li><a href="service.html">Services</a></li>
         <li><a href="contact.html">Contact</a></li>
        </ul>
     </div>
